<resources>
    <string name="app_name">Toggle</string>
    <string name="the_phone_s">The phone system for modern business</string>
    <string name="first_slide_description">Simple to set up. Easy to use. Cloud-based call center software connected to your tools.</string>
    <string name="login">Login to your account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="reset_pass">Reset your password</string>
    <string name="email_id">Email ID</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login_simple">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_todo">To-Do</string>
    <string name="title_history">History</string>
    <string name="title_keypad">Keypad</string>
    <string name="title_people">People</string>
    <string name="call_icon">Call Icon Type</string>
    <string name="call_history">Call History</string>
    <string name="assignedToYou">Assigned To You</string>
    <string name="assignedTo">Assigned To</string>
    <string name="filter_transition">filter_transition</string>
    <string name="details">Call Details</string>
    <string name="test_date">Feb 15, 8:28am</string>
    <string name="contact_info">Contact Information</string>
    <string name="contacts">Contacts</string>
    <string name="teammates">Teammates</string>
    <string name="local">Local</string>
    <string name="call_info">Call Information</string>
    <string name="phone_number">+ %1s</string>
    <string name="recording">Recording</string>
    <string name="tags">Tags</string>
    <string name="one">One</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five" />
    <string name="six">six</string>
    <string name="seven">seven</string>
    <string name="eight">eight</string>
    <string name="nine">nine</string>
    <string name="asterisk">asterisk</string>
    <string name="zero">zero</string>
    <string name="hashtag">hashtag</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="search_hint">Search for a contact here …</string>
</resources>