<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >


        <TextView
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:fontFamily="@font/medium_font"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/title_people"
            android:textColor="@color/primaryTextColor"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/frameLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/search_background"
            android:padding="5dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/title_bar"
            tools:layout_editor_absoluteX="10dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"

                android:background="@drawable/search_background">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/main_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:iconifiedByDefault="false"
                    android:paddingStart="-10dp"
                    android:theme="@style/ThemeOverlay.SearchView"
                    app:closeIcon="@drawable/ic_baseline_clear_24"
                    app:iconifiedByDefault="false"
                    app:queryBackground="@color/transparent"
                    app:queryHint="@string/search_hint"
                    app:searchIcon="@drawable/search_icon"
                    tools:ignore="RtlSymmetry">

                </androidx.appcompat.widget.SearchView>
            </FrameLayout>
        </FrameLayout>


        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center"
            app:checkedButton="@+id/contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout4"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/contacts"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/teammates"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teammates" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/local"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.airbnb.epoxy.EpoxyRecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggle_button_group" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>