<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/to_do_fragment_scene"
    tools:context=".ui.fragments.otherFragments.todo.ToDoFragment">


    <TextView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:fontFamily="@font/medium_font"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/title_todo"
        android:textColor="@color/primaryTextColor"
        android:textSize="36sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/search"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="7dp"
        android:src="@drawable/ic_filter"
        android:transitionName="@string/filter_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/dp_16"
        android:fontFamily="@font/medium_font"
        android:text="@string/assignedToYou"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="106dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_16"
        android:clipToPadding="false"
        android:paddingBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6" />
</androidx.constraintlayout.motion.widget.MotionLayout>